# MIDAS

./: .gitignore  Cargo.toml  README.md
Reconquista/: Reconquista.sln
Reconquista - skeleton/Reconquista - Copy/Reconquista/: Reconquista.vcxproj.filters  test.cpp  trade.cpp
Reconquista/Reconquista/: Reconquista.vcxproj
data_handler/data_handler/: UpgradeLog.htm  a.py  read_me.txt
data_handler/data_handler/data_handler/: data_handler.sln  main.cpp
data_handler/data_handler/data_handler_sample/: test.py
data_handler/data_handler_sample/: data_handler_sample.sln
data_handler/data_handler_sample/data_handler_sample/: 2.0.cpp  (+1 more)
examples/configs/: backtest_events.json  backtest_ma.json  backtest_signals.json  validation_ma.json
examples/data/: btc_perp_1h.csv  btc_perp_events.json  event_signals.csv  sample_signals.csv
src/: lib.rs  main.rs
src/adapters/: csv.rs  json.rs  mod.rs  parquet.rs  provider.rs
src/api/: service.rs
src/domain/: config.rs  errors.rs  types.rs
src/engine/: backtester.rs  invariants.rs  mod.rs  state.rs  strategy.rs
src/execution/: model.rs
src/metrics/: mod.rs
src/reporting/: mod.rs
src/validation/: mod.rs
st_tester/: data_collector.py  st_tester.sln
st_tester/st_tester/: main.cpp  read_me.txt  st_tester.vcxproj
tests/: edge_cases.rs  golden_reports.rs  integration_backtest.rs
tests/common/: mod.rs
tests/golden/: backtest_report.json  consistency_report.json  execution_diagnostics.json  execution_legs.json  order_audit_log.json  replay_diagnostics.json  run_manifest.json  validation_report.json
(+3 files in other folders)
