[package]
name = "midas-backtesting-engine"
version = "0.1.0"
edition = "2021"
description = "Deterministic crypto strategy backtesting and validation engine"
license = "MIT"

[lib]
name = "midas_backtesting_engine"
path = "src/lib.rs"

[[bin]]
name = "midas-cli"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
